# QC_plus_plus

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cc_tests.yml
src/: CMakeLists.txt  Codes.cc  Codes.hpp  Helpers.cc  Helpers.hpp  MatrixHelper.cc  MatrixHelper.hpp  MatrixHelpers.cc  MatrixHelpers.hpp  Operators.cc  Operators.hpp  Qubit.hpp
tests/: CMakeLists.txt  test_3_qubit_code.cc  test_bloch.cc  test_operators.cc  test_qubit.cc
